// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/admin_console/AdminPanel should match snapshot, with footer 1`] = `
<div
  className="admin-panel"
  id="id"
>
  <div
    className="header"
  >
    <div>
      <h3>
        <InjectIntl(FormattedMarkdownMessage)
          defaultMessage="Title"
          id="i18n.title"
        />
      </h3>
      <span>
        <InjectIntl(FormattedMarkdownMessage)
          defaultMessage="Subtitle"
          id="i18n.subtitle"
        />
      </span>
    </div>
  </div>
  Test
  <div
    className="footer"
  >
    Footer
  </div>
</div>
`;

exports[`components/admin_console/AdminPanel should match snapshot, without footer 1`] = `
<div
  className="admin-panel"
  id="id"
>
  <div
    className="header"
  >
    <div>
      <h3>
        <InjectIntl(FormattedMarkdownMessage)
          defaultMessage="Title"
          id="i18n.title"
        />
      </h3>
      <span>
        <InjectIntl(FormattedMarkdownMessage)
          defaultMessage="Subtitle"
          id="i18n.subtitle"
        />
      </span>
    </div>
  </div>
  Test
</div>
`;
